# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ccb-extras"
version = "0.1.0"
description = "Extra tools for Python 3."
authors = [
    "Clyde C Brown <clyde.c.brown@pm.me>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
