# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ccb-extras"
version = "0.1.0"
description = "Extra tools for Python 3."
authors = [
    "Clyde C Brown <clyde.c.brown@pm.me>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/clydecbrown/ccb-extras"
keywords = ["utilities", "yaml"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
ruamel-yaml = "0.18.5"
