# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccb-extras"
version = "1.0.0"
description = "Extra tools for Python 3."
requires-python = ">=3.9"
authors = [
    {name = "Clyde C Brown", email = "clyde.c.brown@pm.me"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["utilities", "yaml", "encryption"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "ccb-essentials>=1.0.1",
    "ruamel-yaml>=0.18.5",
]

[project.urls]
Repository = "https://github.com/clydecbrown/ccb-extras"

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "pycodestyle>=2.13.0",
    "pylint>=3.3.7",
    "pytest>=7.4.4",
    "setuptools>=69.5.1",
]
